Enable mmu/cache, add watchdog support.
 This is a combination of 3 commits.

1). Update bl2: watchdog, cache, sd, usb.

1. Add watchdog support.(test ok)
2. Add cache support.(not test yet)
3. Eanble sd load function.
4. Add usb interface.

Conflicts:

	arch/arm/include/asm/arch-gx/cpu_sdio.h

2). Update cache code.

3). BL2: Enable mmu and cache

Conflicts:

	arch/arm/cpu/armv8/common/firmware/plat/gx/aarch64/aml_cache.c
	arch/arm/cpu/armv8/common/firmware/plat/gx/bl2_plat_setup.c

Change-Id: I36bfd3769bff2cdd5f5ac24042e2318a991d1f8e

--- a/scripts/Makefile.autoconf
+++ b/scripts/Makefile.autoconf
@@ -92,6 +92,9 @@ ifneq ($(KBUILD_SRC),)
 	$(Q)mkdir -p include/asm
 	$(Q)ln -fsn $(KBUILD_SRC)/arch/$(ARCH)/include/asm/arch-$(if $(SOC),$(SOC),$(CPU)) \
 		include/asm/arch
+	$(Q)mkdir -p include2
+	$(Q)ln -fsn $(KBUILD_SRC)/arch/$(ARCH)/include/asm \
+		include2/asm
 else
 	$(Q)ln -fsn arch-$(if $(SOC),$(SOC),$(CPU)) \
 		arch/$(ARCH)/include/asm/arch
