VPU: Add vpu driver.
 This is a combination of 3 commits.

1). vpu: add vpu driver

2). vpu: update vpu clk level

3). vpu: update get_vpu_clk function for compatible with kernel

Change-Id: I5708f173f89a7c9bc0204178b88f4f7284775747

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -14,6 +14,7 @@ obj-y += sound/
 obj-y += tpm/
 obj-y += twserial/
 obj-y += video/
+obj-y += vpu/
 obj-y += watchdog/
 obj-$(CONFIG_QE) += qe/
 obj-$(CONFIG_U_QE) += qe/
