Rename gx(GX) -> gxb(GXBaby)
Rename following folders and files:
  1. arch\arm\include\asm\arch-gx -> arch-gxb
	//cpu arch include file - both bl2 and bl33(uboot)
  2. arch\arm\cpu\armv8\gx -> gxb  //cpu arch file - bl33(uboot)
  3. arch\arm\cpu\armv8\common\firmware\plat\gx -> gxb
	//cpu arch file - bl2
  4. board\amlogic\gx_skt_v1 -> gxb_skt_v1
	//gxbaby socket board config
  5. include\configs\gx_skt_v1.h -> gxb_skt_v1.h
	//gxbaby socket board header file
  6. configs\gx_skt_v1_defconfig -> gxb_skt_v1_defconfig
	//gxbaby socket board defconfig file

Conflicts:

	board/amlogic/Kconfig
	board/amlogic/gxb_skt_v1/eth_setup.c

Change-Id: Ice85e16ad64903b3c2fab3de85da6f35e23354b9

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -733,7 +733,7 @@ config TARGET_LS2085A_SIMU
 	select ARM64
 
 config TARGET_MESON_GX
-	bool "Support meson gx 64bit"
+	bool "Support meson gx-series 64bit"
 	select ARM64
 
 config TARGET_LS1021AQDS
