Update bl2 storage load func, add pll init
Conflicts:

	arch/arm/cpu/armv8/common/firmware/common/fip.c
	arch/arm/cpu/armv8/common/firmware/plat/gxb/storage.c

Change-Id: I0c66582d1440217ab3cd55b84d59ed6e93e065c4

--- a/arch/arm/cpu/armv8/common/firmware/Makefile.gcc
+++ b/arch/arm/cpu/armv8/common/firmware/Makefile.gcc
@@ -363,7 +363,7 @@ $(BIN) : $(ELF)
 	@echo
 
 .PHONY : bl$(1)
-bl$(1) : $(BUILD_DIR) $(BIN) $(DUMP)
+bl$(1) : $(BUILD_DIR) $(DUMP) $(BIN)
 
 all : bl$(1)
 
