vpu: update vpu driver, add vpu command. pxp verified
Change-Id: I6d984c6e58076419d7aaaf1a054b929d46bbfa4d

--- a/common/Makefile
+++ b/common/Makefile
@@ -187,6 +187,7 @@ obj-$(CONFIG_YAFFS2) += cmd_yaffs2.o
 obj-$(CONFIG_CMD_SPL) += cmd_spl.o
 obj-$(CONFIG_CMD_ZIP) += cmd_zip.o
 obj-$(CONFIG_CMD_ZFS) += cmd_zfs.o
+obj-$(CONFIG_VPU_PRESET) += cmd_vpu.o
 
 # others
 obj-$(CONFIG_BOOTSTAGE) += bootstage.o
