GXBaby: Update ddr and timer code
This is a combination of 6 commits.

1). Update timer in uboot

2). Update timer compile fix

3). Make bl2 as release version.

4). Update ddr code.

1. Remove macro defines, use runtime config.

Conflicts:

	arch/arm/cpu/armv8/common/firmware/plat/gxb/ddr/ddr.c
	arch/arm/include/asm/arch-gxb/ddr.h
	board/amlogic/gxb_skt_v1/firmware/timing.c

5). Update timer interface, fix define conflict

6). Update ddr code.

Change-Id: If7d5fab1e200846c749d7eeb1813be7dc2545fc1

--- a/arch/arm/cpu/armv8/common/firmware/Makefile.gcc
+++ b/arch/arm/cpu/armv8/common/firmware/Makefile.gcc
@@ -37,7 +37,7 @@
 # Build verbosity
 V			:= 0
 # Debug build
-DEBUG			:= 1
+BUILD_TYPE		:= ${BL2_BUILD_TYPE}
 # Build architecture
 ARCH 			:= aarch64
 # Build platform
@@ -66,12 +66,6 @@ else
 	Q=
 endif
 export Q
-
-ifneq (${DEBUG}, 0)
-	BUILD_TYPE	:=	debug
-else
-	BUILD_TYPE	:=	release
-endif
 
 BL_COMMON_SOURCES	:=	common/bl_common.c			\
 				common/debug.c				\
