--- a/common/Makefile
+++ b/common/Makefile
@@ -188,6 +188,8 @@ obj-$(CONFIG_CMD_SPL) += cmd_spl.o
 obj-$(CONFIG_CMD_ZIP) += cmd_zip.o
 obj-$(CONFIG_CMD_ZFS) += cmd_zfs.o
 obj-$(CONFIG_VPU_PRESET) += cmd_vpu.o
+obj-$(CONFIG_CMD_DDR_TEST) += cmd_d2pll.o
+obj-$(CONFIG_CMD_DDR_TEST) += cmd_ddr_test.o
 
 # others
 obj-$(CONFIG_BOOTSTAGE) += bootstage.o
