Update bl30/bl31 and bl301 code
This is a combination of 3 commits.

1). GXB: UBOOT: update BL31.bin for Generic Timer Control.

2). GXB: BL301: update BL301 for secure task.

  BL301 space:
    SRAM offset +36K,code size 17K, share memory 3K.

  task_entry.S:
    secure/high/low task entries are located into the top of BL301 SRAM.
  all tasks share memory are located into the bottom of BL301 SRAM.

3). GXB: UBOOT: BL301 support suspend/resume path.

Change-Id: I685b2326453fba3fee2560c39798f4f837aaee8e

--- a/arch/arm/cpu/armv8/gxb/firmware/scp_task/Makefile
+++ b/arch/arm/cpu/armv8/gxb/firmware/scp_task/Makefile
@@ -47,10 +47,12 @@ vpath %.lds ./
 vpath %.S ./
 vpath %.c ./
 
-OBJS = user_task_entry.o
+#OBJS = user_task_entry.o
+OBJS = task_entry.o
 OBJS += user_task.o
 OBJS += misc.o
 OBJS += uart.o
+OBJS += suspend.o
 
 OBJS := $(OBJS:%=$(obj)/%)
 
@@ -67,16 +69,26 @@ $(obj)/bl301.out: $(obj)/user_task.lds Makefile $(OBJS)
 	@$(OBJDUMP) $(DUMP_FLAGS) $@ > $(obj)/bl301.dis
 
 $(obj)/%.o : %.c
-	 @echo "	CC $(subst $(obj)/,,$@)"
-	 @mkdir -p $(@D)
-	 @$(CC) $(CFLAGS) -MD  -c $< -o $@
+	@echo "	CC $(subst $(obj)/,,$@)"
+	@mkdir -p $(@D)
+	@$(CC) $(CFLAGS) -MD  -c $< -o $@
 
 $(obj)/misc.o:	$(obj)/misc.s
 	@echo "	CC $(subst $(obj)/,,$@)"
 	@mkdir -p $(@D)
 	@$(CC) $(CFLAGS) -MD  -c $< -o $@
 
+$(obj)/task_entry.o:	$(obj)/task_entry.s
+	@echo "	CC $(subst $(obj)/,,$@)"
+	@mkdir -p $(@D)
+	@$(CC) $(CFLAGS) -MD  -c $< -o $@
+
 $(obj)/misc.s:	misc.S
+	@mkdir -p $(@D)
+	@echo "	CPP $(subst $(obj)/,,$@)"
+	@$(CPP) -D__ASSEMBLY__ -E $< -o $@
+
+$(obj)/task_entry.s:  task_entry.S
 	@mkdir -p $(@D)
 	@echo "	CPP $(subst $(obj)/,,$@)"
 	@$(CPP) -D__ASSEMBLY__ -E $< -o $@
