Add gxbaby new config p200(dev) p201(ref).
1 ./mk gxb_p200_v1 //build gxbaby dev board
2 ./mk gxb_p201_v1 //build gxbaby ref board

Change-Id: I2c67ad7f38a616a7610fac17e930a7e1857748b6

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -1,8 +1,24 @@
 
 config GXB_SKT_V1
-	bool "Support meson gxbaby skt v1 board"
+	bool "Support amlogic gxbaby skt v1 board"
+	default n
+
+config GXB_P200_V1
+	bool "Support amlogic gxbaby p200(develop) v1 board"
+	default n
+
+config GXB_P201_V1
+	bool "Support amlogic gxbaby p200(reference) v1 board"
 	default n
 
 if GXB_SKT_V1
 source "board/amlogic/gxb_skt_v1/Kconfig"
+endif
+
+if GXB_P200_V1
+source "board/amlogic/gxb_p200_v1/Kconfig"
+endif
+
+if GXB_P201_V1
+source "board/amlogic/gxb_p201_v1/Kconfig"
 endif
