Add gxb_pxp config for simulator
1. ./mk gxb_pxp //for pxp simulator use
2. update bl2 version info, use uboot version

Change-Id: I05e9f3dd03a010c6d076a5e81b591050d0dec104

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -11,6 +11,10 @@ config GXB_P201_V1
 	bool "Support amlogic gxbaby p200(reference) v1 board"
 	default n
 
+config PXP_EMULATOR
+	bool "Support pxp environment"
+	default n
+
 if GXB_SKT_V1
 source "board/amlogic/gxb_skt_v1/Kconfig"
 endif
