--- a/common/Makefile
+++ b/common/Makefile
@@ -277,4 +277,7 @@ obj-y += s_record.o
 obj-y += xyzModem.o
 obj-y += cmd_disk.o
 
+# amlogic commands
+obj-$(CONFIG_CMD_REBOOT) += cmd_reboot.o
+
 CFLAGS_env_embedded.o := -Wa,--no-warn -DENV_CRC=$(shell tools/envcrc 2>/dev/null)
