[GXBB] EMMC driver and factory burning update
1, Burning code added in path 'drivers/usb/gadget/v2_burning/';
2, Emmc driver and store_interface updated from Larson/yulong;
3, Store interface updated by yulong;
4, USB burning tested ok in skt emmc flash.
5, fix bug when burning bootloader when size align to 64k

Change-Id: I3b7e72dfb38542a51b3e3bfb14bfa6df12d5339d
Signed-off-by: Sam Wu <yihui.wu@amlogic.com>

--- a/common/Makefile
+++ b/common/Makefile
@@ -133,6 +133,8 @@ obj-$(CONFIG_CMD_MII) += cmd_mdio.o
 endif
 obj-$(CONFIG_CMD_MISC) += cmd_misc.o
 obj-$(CONFIG_CMD_MMC) += cmd_mmc.o
+obj-$(CONFIG_CMD_MMC) += cmd_aml_mmc.o
+obj-$(CONFIG_STORE_COMPATIBLE) += store_interface.o cmd_burnup.o
 obj-$(CONFIG_CMD_MMC_SPI) += cmd_mmc_spi.o
 obj-$(CONFIG_MP) += cmd_mp.o
 obj-$(CONFIG_CMD_MTDPARTS) += cmd_mtdparts.o
