--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -25,3 +25,5 @@ obj-y += input/
 obj-y += soc/
 obj-y += thermal/
 obj-$(CONFIG_EFUSE) += efuse/
+obj-$(CONFIG_AML_V2_FACTORY_BURN)	+= usb/gadget/v2_burning/
+
