PD #107425: gxbb: add initial hdmitx driver
Usage:
hdmitx hdmitx hpd
    Detect hdmi rx plug-in
hdmitx output [list | FORMAT | bist MODE]
    list: list support formats
    FORMAT can be 720p60/50hz, 1080i60/50hz, 1080p60hz, etc
    bist MODE: 1 Color bar  2 Line  3 Dots  0 default
hdmitx off
    Turn off hdmitx output

hdmitx output [FORMAT]:
480i60hz, 480p60hz, 576i50hz, 576p50hz, 720p50hz, 720p60hz,
1080i50hz, 1080i60hz, 1080p50hz, 1080p60hz, 2160p24hz,
2160p25hz, 2160p30hz, smpte24hz, 2160p60hz420, 2160p50hz420

Change-Id: I799c2aa34584aea3f11ea06591dced7c6e28fc2b

--- a/arch/arm/cpu/armv8/gxb/Makefile
+++ b/arch/arm/cpu/armv8/gxb/Makefile
@@ -3,5 +3,6 @@ obj-y	:= clock.o sdio.o gpio.o
 obj-y	+= usb.o
 obj-y   += bl31_apis.o
 obj-y	+= watchdog.o
+obj-$(CONFIG_AML_HDMITX20) += hdmitx20/
 obj-y	+= timer.o
 obj-y	+= mailbox.o
