[GXBB]factory burning update, support sdcard/udisk burning
1,  'sdc_update' to burning a image from sdcard in fat32 format;
2,  'sdc_burn ' to burn aml_upgrade_package.img in fat32 sdcard;
3,  add 'try_auto_burn' when code_boot to auto usb burn without key;
4,  for nand boot board, fix devcie_boot_flag error in 'drivers/mmc/mmc';
5,  'usb_update' to burn partition image in udisk;
6,  'usb_burn' to burn aml_upgrade_package.img in fat32 sdcard.

Change-Id: Ic163225dddde05e8f75bc716b05d73859648fde3
Signed-off-by: Sam Wu <yihui.wu@amlogic.com>

--- a/drivers/usb/gadget/v2_burning/Makefile
+++ b/drivers/usb/gadget/v2_burning/Makefile
@@ -25,11 +25,13 @@ EXTRA_CFLAGS = -I./v2_common -I./v2_usb_tool -I./v2_sdc_burn
 obj-$(CONFIG_AML_V2_FACTORY_BURN) += aml_v2_burn.o
 
 aml_v2_burn-y = aml_v2_burning.o
+aml_v2_burn-y += v2_usb_tool/optimus_core.o v2_usb_tool/optimus_transform.o
 aml_v2_burn-y += v2_common/optimus_download.o v2_common/optimus_buffer_manager.o v2_common/optimus_simg2img.o
-aml_v2_burn-y += v2_common/optimus_progress.o v2_common/optimus_img_decoder.o v2_common/optimus_fat.o
+aml_v2_burn-y += v2_common/optimus_progress.o
+ifdef CONFIG_AML_FACTORY_BURN_LOCAL_UPGRADE
+aml_v2_burn-y += v2_common/optimus_img_decoder.o v2_common/optimus_fat.o
 aml_v2_burn-y += v2_sdc_burn/optimus_sdc_update.o v2_sdc_burn/optimus_sdc_burn.o v2_sdc_burn/optimus_ini_parser.o
 aml_v2_burn-y += v2_sdc_burn/optimus_ini__aml_sdc_burn.o
-aml_v2_burn-y += v2_usb_tool/optimus_core.o v2_usb_tool/optimus_transform.o
 aml_v2_burn-y += v2_usb_burn/optimus_usb_burn.o v2_usb_burn/optimus_usb_update.o
 aml_v2_burn-$(CONFIG_UNIFY_KEY_MANAGE) += v2_common/optimus_download_key.o
 aml_v2_burn-$(CONFIG_SD_BURNING_SUPPORT_UI) += v2_common/optimus_progress_ui.o
@@ -38,4 +40,5 @@ aml_v2_burn-y += aml_sysrecovery/aml_sysrecovery.o
 aml_v2_burn-$(CONFIG_DETECT_SYS_RECOVERY_KEY) += aml_sysrecovery/cmd_detect_sys_recovery_key.o
 aml_v2_burn-$(CONFIG_SUPPORT_SDC_KEYBURN) += v2_sdc_burn/sdc_burnkeys/optimus_key_burn.o
 aml_v2_burn-$(CONFIG_SUPPORT_SDC_KEYBURN) += v2_sdc_burn/sdc_burnkeys/sdc_keysprovider.o v2_sdc_burn/sdc_burnkeys/sdc_bootPart_license.o
+endif#ifdef CONFIG_AML_FACTORY_BURN_LOCAL_UPGRADE
 
