osd: add osd framebuffer device
Usage:
	osd open;
	bmp display <imageAddr>;
	hdmi output <format>;

verified on reference board p201/p200.

Change-Id: I2b05cfa6aab50af1d42274c74ea38bb8fc2d6a2e

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -26,4 +26,5 @@ obj-y += soc/
 obj-y += thermal/
 obj-$(CONFIG_EFUSE) += efuse/
 obj-$(CONFIG_AML_V2_FACTORY_BURN)	+= usb/gadget/v2_burning/
+obj-y += display/
 
