PD #108610: reduce EE voltage to 0.85v when suspend
1. seperate pwr_ctrl.c to each board folder;
2. change config header files for compile problem of A53 and M3;
3. change Makefile to include customer configs for bl301.

Change-Id: If87e95f42c292acfdfe655e3be8ff53e16219ec2

--- a/arch/arm/cpu/armv8/gxb/firmware/scp_task/Makefile
+++ b/arch/arm/cpu/armv8/gxb/firmware/scp_task/Makefile
@@ -29,7 +29,10 @@ CFLAGS_CPU=-march=$(ARM_ARCH) -mcpu=$(ARM_CPU) -mthumb -Os -mno-sched-prolog
 # FPU compilation flags
 CFLAGS_FPU-$(CONFIG_FPU)=-mfpu=fpv4-sp-d16 -mfloat-abi=hard
 
-CFLAGS_INCLUDE=-I. \
+CFLAGS_INCLUDE=-I$(buildsrc)/build/include/ \
+               -I$(buildsrc)/include/ \
+               -I$(buildsrc)/arch/arm/include/ \
+               -I. \
                -I./include \
                -I./build
 
