PD#108655: move dtb from boot.img to flash reserv area
1, nand driver update;
   1.1) get part table from dtb in reserve area;
   1.2) support uboot operations without dtb on board;
   1.3) init device_boot_flag once id was found;
2, emmc driver update, get part table from dtb in reserve area;
3, factory usb/sdcard burning update,
   3.1)download meson1.dtb before flash inited;
   3.2)update flsh init flow for buring.

Change-Id: Ie168e71d6210632d4367298733fcc97f944752f1
Signed-off-by: Yonghui Yu <yonghui.yu@amlogic.com>
Signed-off-by: Long Yu <long.yu@amlogic.com>
Signed-off-by: Sam Wu <yihui.wu@amlogic.com>

--- a/common/Makefile
+++ b/common/Makefile
@@ -34,6 +34,9 @@ obj-$(CONFIG_CMD_BOOTM) += cmd_bootm.o bootm.o bootm_os.o
 obj-y += cmd_help.o
 obj-y += cmd_version.o
 
+#partitions
+obj-y += partitions.o
+
 # environment
 obj-y += env_attr.o
 obj-y += env_callback.o
