add secure storage APIs for BL31
Change-Id: Ic27f7725e2b96f8dcf7e64321e2bee4051c5e3e5

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -27,4 +27,4 @@ obj-y += thermal/
 obj-$(CONFIG_EFUSE) += efuse/
 obj-$(CONFIG_AML_V2_FACTORY_BURN)	+= usb/gadget/v2_burning/
 obj-y += display/
-
+obj-$(CONFIG_SECURE_STORAGE) += securestorage/
