PD#108484: cvbs: cvbs driver integrated for s905.
(1) support display
(2) add hdmi and cvbs auto detect
Change-Id: I2eec4289f44286c2d32bc54697c90f744c25a7d4

--- a/common/Makefile
+++ b/common/Makefile
@@ -291,5 +291,7 @@ obj-y += cmd_scp.o
 obj-$(CONFIG_AML_HDMITX20) += hdmi_parameters.o cmd_hdmitx.o
 obj-$(CONFIG_CMD_JTAG) += cmd_jtag.o
 obj-$(CONFIG_AML_OSD) += cmd_osd.o
+obj-$(CONFIG_AML_CVBS) += cmd_cvbs.o
+obj-$(CONFIG_AML_VOUT) += cmd_vout.o
 
 CFLAGS_env_embedded.o := -Wa,--no-warn -DENV_CRC=$(shell tools/envcrc 2>/dev/null)
