[storagekey] add support for storagekey.
Change-Id: I477957385091275162700431c5b38c6bb3689146

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -28,3 +28,4 @@ obj-$(CONFIG_EFUSE) += efuse/
 obj-$(CONFIG_AML_V2_FACTORY_BURN)	+= usb/gadget/v2_burning/
 obj-y += display/
 obj-$(CONFIG_SECURE_STORAGE) += securestorage/
+obj-$(CONFIG_SECURE_STORAGE) += storagekey/
