--- a/common/Makefile
+++ b/common/Makefile
@@ -37,6 +37,7 @@ obj-y += cmd_version.o
 #partitions
 obj-y += partitions.o
 
+
 # environment
 obj-y += env_attr.o
 obj-y += env_callback.o
@@ -98,6 +99,7 @@ obj-$(CONFIG_CMD_EXT2) += cmd_ext2.o
 obj-$(CONFIG_CMD_FAT) += cmd_fat.o
 obj-$(CONFIG_CMD_FDC) += cmd_fdc.o
 obj-$(CONFIG_OF_LIBFDT) += cmd_fdt.o fdt_support.o
+obj-$(CONFIG_MULTI_DTB) += aml_dt.o
 obj-$(CONFIG_CMD_FITUPD) += cmd_fitupd.o
 obj-$(CONFIG_CMD_FLASH) += cmd_flash.o
 ifdef CONFIG_FPGA
