[GXBB]Keymanage: Unify interfaces for securekey/efusekey
1, '/unifykey' in dts define keys which supported by key manager;
   1.1) prop 'key-device' choose efuse/non-secure key/secure key;
   1.2) prop 'key-type' define how to decrypt the src key value;
2, Usage: (See 'help keyman' and 'help keyunify' for detail)
   2.1)keyunify:
       this cmd treats all key val as binary, i.e, will not parse key value except keyLen
   2.2)keyman:
       For offering convenience for APPs, this cmd will check and decrypt user format.
3, key burning using usb tool is tested ok.
4, default add serialno/mac to bootargs for p200/p201.
5. nand/emmc all verify pass for p200/p201.

Change-Id: I5dbb2a9f57ed57154a4e1e3a9fc86a00cadf1397
Signed-off-by: Sam Wu <yihui.wu@amlogic.com>

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -25,6 +25,7 @@ obj-y += input/
 obj-y += soc/
 obj-y += thermal/
 obj-$(CONFIG_EFUSE) += efuse/
+obj-$(CONFIG_UNIFY_KEY_MANAGE) += keymanage/
 obj-$(CONFIG_AML_V2_FACTORY_BURN)	+= usb/gadget/v2_burning/
 obj-y += display/
 obj-$(CONFIG_SECURE_STORAGE) += securestorage/
