tl1: bringup: add tl1_x301_v1 config [1/1]
PD#172587

Problem:
bl33 need support tl1_x301_v1 config

Solution:
add tl1_x301_v1 config

Verify:
test pass on tl1_x301_v1

Change-Id: I9debebcf0134f47276e27a4794a59fd22d8a33c2
Signed-off-by: Bichao Zheng <bichao.zheng@amlogic.com>

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -204,6 +204,10 @@ config TL1_SKT_V1
 	bool "Support amlogic tl1 socket v1 board"
 	default n
 
+config TL1_X301_V1
+	bool "Support amlogic tl1 x301 v1 board"
+	default n
+
 config PXP_EMULATOR
 	bool "Support pxp environment"
 	default n
@@ -433,6 +437,10 @@ endif
 
 if TL1_SKT_V1
 source "board/amlogic/tl1_skt_v1/Kconfig"
+endif
+
+if TL1_X301_V1
+source "board/amlogic/tl1_x301_v1/Kconfig"
 endif
 
 if ODROID_C2
