tl1: bringup: add tl1_t309_v1 config [1/1]
PD#SWPL-2787

Problem:
bl33 need support tl1_t309_v1 config

Solution:
add tl1_t309_v1 config, config base on tl1_x301_v1
ddr_setting base on tl1_skt_v1

Verify:
test pass on tl1_t309_v1

Change-Id: Iac86300aac469eb39f01aacc5a38cd540bde7818
Signed-off-by: Bichao Zheng <bichao.zheng@amlogic.com>

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -208,6 +208,10 @@ config TL1_X301_V1
 	bool "Support amlogic tl1 x301 v1 board"
 	default n
 
+config TL1_T309_V1
+	bool "Support amlogic tl1 t309 v1 board"
+	default n
+
 config PXP_EMULATOR
 	bool "Support pxp environment"
 	default n
@@ -441,6 +445,10 @@ endif
 
 if TL1_X301_V1
 source "board/amlogic/tl1_x301_v1/Kconfig"
+endif
+
+if TL1_T309_V1
+source "board/amlogic/tl1_t309_v1/Kconfig"
 endif
 
 if ODROID_C2
