bootloader: Add S410 Configuration [2/3]
PD#SWPL-2887

Problem:
  Adapt Soundbar solution to S410 platform

Solution:
  Add u-boot definitions for S410

Verify:
    S410 A113D

Change-Id: I9df1e1274acf3b24267cc418fef37142ff5a6c8c
Signed-off-by: Yeping Miao <yeping.miao@amlogic.com>

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -148,6 +148,10 @@ config AXG_S400_V1
 	bool "Support amlogic axg s400 v1 board"
 	default n
 
+config AXG_S410_V1
+	bool "Support amlogic axg s410 v1 board"
+	default n
+
 config AXG_S400_V1_GVA
 	bool "Support amlogic axg s400 v1 gva board"
 	default n
@@ -385,6 +389,10 @@ endif
 
 if AXG_S400_V1
 source "board/amlogic/axg_s400_v1/Kconfig"
+endif
+
+if AXG_S410_V1
+source "board/amlogic/axg_s410_v1/Kconfig"
 endif
 
 if AXG_S400_V1_GVA
