uboot: Add a new board S400_SBR [3/3]
PD#SWPL-4435

Problem:
  S400_SBR platform includes the S400 + D621.

Solution:
  Define a new configuration for S400_SBR.
S400_SBR is changed from axg_s400_v1.

Verify:
  S400+D621 A113D

Change-Id: I2993621dec0cb6dbe78cafc129283603bcc245e2
Signed-off-by: Yeping Miao <yeping.miao@amlogic.com>

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -156,6 +156,10 @@ config AXG_S400_V1_GVA
 	bool "Support amlogic axg s400 v1 gva board"
 	default n
 
+config AXG_S400_V1_SBR
+	bool "Support amlogic axg s400 v1 SBR board"
+	default n
+
 config AXG_S420_V1
 	bool "Support amlogic axg s420 v1 board"
 	default n
@@ -397,6 +401,10 @@ endif
 
 if AXG_S400_V1_GVA
 source "board/amlogic/axg_s400_v1_gva/Kconfig"
+endif
+
+if AXG_S400_V1_SBR
+source "board/amlogic/axg_s400_v1_sbr/Kconfig"
 endif
 
 if AXG_S420_V1
