config: add sm1 skt and ac200 config name [1/1]
PD#SWPL-5865

Problem:
need add sm1 configs

Solution:
1. add sm1_skt_v1 and sm1_ac200_v1 config
2. sm1_skt_v1 share bsp with g12a_skt_v1
3. sm1_ac200_v1 share bsp with g12a_u200_v1

Verify:
test pass on u200

Change-Id: I04eb3c4a45b2909deb35512c3aed46ef3fd0de02
Signed-off-by: xiaobo gu <xiaobo.gu@amlogic.com>

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -220,6 +220,14 @@ config TL1_T309_V1
 	bool "Support amlogic tl1 t309 v1 board"
 	default n
 
+config SM1_SKT_V1
+	bool "Support amlogic sm1 skt v1 board"
+	default n
+
+config SM1_AC200_V1
+	bool "Support amlogic sm1 ac200 v1 board"
+	default n
+
 config PXP_EMULATOR
 	bool "Support pxp environment"
 	default n
@@ -465,6 +473,14 @@ endif
 
 if TL1_T309_V1
 source "board/amlogic/tl1_t309_v1/Kconfig"
+endif
+
+if SM1_SKT_V1
+source "board/amlogic/sm1_skt_v1/Kconfig"
+endif
+
+if SM1_AC200_V1
+source "board/amlogic/sm1_ac200_v1/Kconfig"
 endif
 
 if ODROID_C2
