tm2: add skt and pxp config [1/1]
PD#SWPL-1837

Problem:
tm2 need independent config for usb driver

Solution:
add tm2 skt config based on tl1 skt

Verify:
skip

Signed-off-by: xiaobo gu <xiaobo.gu@amlogic.com>

Conflicts:
	board/amlogic/Kconfig

Change-Id: I3b9d4871a93f0ddf347a7f4ccb233e2e82d01d5e

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -232,6 +232,10 @@ config SM1_AC213_V1
 	bool "Support amlogic sm1 ac213 v1 board"
 	default n
 
+config TM2_SKT_V1
+	bool "Support amlogic tm2 skt v1 board"
+	default n
+
 config PXP_EMULATOR
 	bool "Support pxp environment"
 	default n
@@ -489,6 +493,10 @@ endif
 
 if SM1_AC213_V1
 source "board/amlogic/sm1_ac213_v1/Kconfig"
+endif
+
+if TM2_SKT_V1
+source "board/amlogic/tm2_skt_v1/Kconfig"
 endif
 
 if ODROID_C2
