tm2: add ab301 config [1/1]
PD#SWPL-6678

Problem:
new board ab301 need add config

Solution:
add new config ab301

Verify:
test pass on ab301

Change-Id: Ifcd2b0933fa3bd8861c32f0ae216b1573112538d
Signed-off-by: xiaobo gu <xiaobo.gu@amlogic.com>

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -236,6 +236,10 @@ config TM2_SKT_V1
 	bool "Support amlogic tm2 skt v1 board"
 	default n
 
+config TM2_AB301_V1
+	bool "Support amlogic tm2 ab301 v1 board"
+	default n
+
 config PXP_EMULATOR
 	bool "Support pxp environment"
 	default n
@@ -497,6 +501,10 @@ endif
 
 if TM2_SKT_V1
 source "board/amlogic/tm2_skt_v1/Kconfig"
+endif
+
+if TM2_AB301_V1
+source "board/amlogic/tm2_ab301_v1/Kconfig"
 endif
 
 if ODROID_C2
