uboot: changes for s905x3 ac213 bring up [1/3]
PD#SWPL-6970

Problem:
for s905x3 ac213 bring up, support multi-dts

Solution:
s905x3 ac213 bring up

Verify:
AC213

Change-Id: Ib86e47d177d5111c232d35d56278ba88084e55df
Signed-off-by: xiaoliang.wang <xiaoliang.wang@amlogic.com>

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -228,6 +228,10 @@ config SM1_AC200_V1
 	bool "Support amlogic sm1 ac200 v1 board"
 	default n
 
+config SM1_AC213_V1
+	bool "Support amlogic sm1 ac213 v1 board"
+	default n
+
 config PXP_EMULATOR
 	bool "Support pxp environment"
 	default n
@@ -481,6 +485,10 @@ endif
 
 if SM1_AC200_V1
 source "board/amlogic/sm1_ac200_v1/Kconfig"
+endif
+
+if SM1_AC213_V1
+source "board/amlogic/sm1_ac213_v1/Kconfig"
 endif
 
 if ODROID_C2
