tm2: update tm2 board config [1/1]
PD#SWPL-6494

Problem:
tm2 need to update board config

Solution:
1.tm2_t962e2_ab319_v1: rename tm2_skt_v1
2.tm2_t962x3_ab301_v1: rename tm2_ab301_v1
3.tm2_t962x3_ab309_v1: base on tm2_t962e2_ab319_v1
4.tm2_t962e2_ab311_v1: base on tm2_t962x3_ab301_v1

Verify:
all config can boot to uboot console on x309 skt board

Signed-off-by: Zhongfu Luo <zhongfu.luo@amlogic.com>

Conflicts:
	board/amlogic/Kconfig

Change-Id: Ia6b657b6b40335a229fe8ec3fa751a12dd599693

--- a/board/amlogic/Kconfig
+++ b/board/amlogic/Kconfig
@@ -232,12 +232,20 @@ config SM1_AC213_V1
 	bool "Support amlogic sm1 ac213 v1 board"
 	default n
 
-config TM2_SKT_V1
-	bool "Support amlogic tm2 skt v1 board"
+config TM2_T962E2_AB319_V1
+	bool "Support amlogic tm2 t962e2 ab319 v1 board"
 	default n
 
-config TM2_AB301_V1
-	bool "Support amlogic tm2 ab301 v1 board"
+config TM2_T962E2_AB311_V1
+	bool "Support amlogic tm2 t962e2 ab311 v1 board"
+	default n
+
+config TM2_T962X3_AB309_V1
+	bool "Support amlogic tm2 t962x3 ab309 v1 board"
+	default n
+
+config TM2_T962X3_AB301_V1
+	bool "Support amlogic tm2 t962x3 ab301 v1 board"
 	default n
 
 config PXP_EMULATOR
@@ -499,12 +507,20 @@ if SM1_AC213_V1
 source "board/amlogic/sm1_ac213_v1/Kconfig"
 endif
 
-if TM2_SKT_V1
-source "board/amlogic/tm2_skt_v1/Kconfig"
+if TM2_T962E2_AB319_V1
+source "board/amlogic/tm2_t962e2_ab319_v1/Kconfig"
 endif
 
-if TM2_AB301_V1
-source "board/amlogic/tm2_ab301_v1/Kconfig"
+if TM2_T962E2_AB311_V1
+source "board/amlogic/tm2_t962e2_ab311_v1/Kconfig"
+endif
+
+if TM2_T962X3_AB309_V1
+source "board/amlogic/tm2_t962x3_ab309_v1/Kconfig"
+endif
+
+if TM2_T962X3_AB301_V1
+source "board/amlogic/tm2_t962x3_ab301_v1/Kconfig"
 endif
 
 if ODROID_C2
