--- a/configs/rk3308_defconfig
+++ b/configs/rk3308_defconfig
@@ -24,6 +24,8 @@ CONFIG_BOOTDELAY=0
 CONFIG_SYS_CONSOLE_INFO_QUIET=y
 # CONFIG_DISPLAY_CPUINFO is not set
 CONFIG_ANDROID_BOOTLOADER=y
+# CONFIG_SPL_RAW_IMAGE_SUPPORT is not set
+# CONFIG_SPL_LEGACY_IMAGE_SUPPORT is not set
 CONFIG_SPL_STACK_R=y
 # CONFIG_SPL_SKIP_RELOCATE is not set
 CONFIG_SPL_RELOC_TEXT_BASE=0x3001000
