misc: add tpl misc compile support
Separate the tpl compile with spl compile.

Change-Id: I01e6005fbc9fc49cc0fe6b357a4f15b35f591944
Signed-off-by: Jason Zhu <jason.zhu@rock-chips.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -22,6 +22,15 @@ config SPL_MISC
 	  set of generic read, write and ioctl methods may be used to
 	  access the device.
 
+config TPL_MISC
+	bool "Enable Driver Model for Misc drivers in TPL"
+	depends on TPL_DM
+	help
+	  Enable driver model for miscellaneous devices. This class is
+	  used only for those do not fit other more general classes. A
+	  set of generic read, write and ioctl methods may be used to
+	  access the device.
+
 config ALTERA_SYSID
 	bool "Altera Sysid support"
 	depends on MISC
