--- a/arch/arm/dts/rk3308.dtsi
+++ b/arch/arm/dts/rk3308.dtsi
@@ -452,7 +452,7 @@
 
 
 	sfc: sfc@ff4c0000 {
-		compatible = "rockchip,rksfc";
+		compatible = "rockchip,rksfc","rockchip,sfc";
 		reg = <0x0 0xff4c0000 0x0 0x4000>;
 		interrupts = <GIC_SPI 82 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&cru SCLK_SFC>, <&cru HCLK_SFC>;
