rockchip: rk1808: support spl & tpl build
Change-Id: I6588fcc592d4ce64b8f0f774c7bca4d0a633543d
Signed-off-by: Jason Zhu <jason.zhu@rock-chips.com>

--- a/arch/arm/mach-rockchip/Kconfig
+++ b/arch/arm/mach-rockchip/Kconfig
@@ -378,6 +378,8 @@ config ROCKCHIP_RK1808
 	select ARM_SMCCC
 	select GICV3 if !COPROCESSOR_RK1808
 	select DEBUG_UART_BOARD_INIT
+	select SUPPORT_SPL if !COPROCESSOR_RK1808
+	select SUPPORT_TPL if !COPROCESSOR_RK1808
 	help
 	  The Rockchip RK1808 is a ARM-based Soc which embedded with dual
 	  Cortex-A35.
