--- a/configs/rk3368_defconfig
+++ b/configs/rk3368_defconfig
@@ -97,6 +97,7 @@ CONFIG_DRM_ROCKCHIP_DW_MIPI_DSI=y
 CONFIG_DRM_ROCKCHIP_ANALOGIX_DP=y
 CONFIG_DRM_ROCKCHIP_LVDS=y
 CONFIG_DRM_ROCKCHIP_RGB=y
+CONFIG_DRM_ROCKCHIP_RK1000=y
 CONFIG_LCD=y
 CONFIG_USE_TINY_PRINTF=y
 CONFIG_ERRNO_STR=y
