--- a/arch/arm/dts/rk3308-u-boot.dtsi
+++ b/arch/arm/dts/rk3308-u-boot.dtsi
@@ -8,7 +8,7 @@
 
 	chosen {
 		stdout-path = &uart2;
-		u-boot,spl-boot-order = &nandc, &emmc;
+		u-boot,spl-boot-order = &sfc, &nandc, &emmc;
 	};
 };
 
@@ -46,6 +46,17 @@
 &sfc {
 	u-boot,dm-pre-reloc;
 	status = "okay";
+
+	#address-cells = <1>;
+	#size-cells = <0>;
+	flash@0 {
+		u-boot,dm-spl;
+		compatible = "spi-nand";
+		reg = <0>;
+		spi-tx-bus-width = <1>;
+		spi-rx-bus-width = <4>;
+		spi-max-frequency = <96000000>;
+	};
 };
 
 &saradc {
